--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Designo | Home</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="./css/home.css" />
   </head>
+  <!-- favicon -->
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="./images/favicon-32x32.png"
+  />
 
   <body>
     <header>
       <nav>
         <div class="container">
           <div class="navigation">
-            <img src="../images/shared/desktop/logo-dark.png" alt="Designo" />
+            <img src="./images/shared/desktop/logo-dark.png" alt="Designo" />
             <ul class="menu-nav nav-bg-dark">
-              <li><a href="./about.html">Our company</a></li>
+              <li><a href="./pages/about.html">Our company</a></li>
               <li><a href="#">Location</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
@@ -31,11 +38,9 @@
               fully responsive websites, app design, and engaging brand
               experiences. Find out more about our services.
             </p>
-            <button class="btn button-on-dark button-on-light">
-              Learn more
-            </button>
+            <button class="btn button-on-dark">Learn more</button>
           </div>
-          <img src="../images/home/desktop/image-hero-phone.svg" alt="" />
+          <img src="./images/home/desktop/image-hero-phone.svg" alt="" />
         </div>
       </div>
     </header>
@@ -65,7 +70,7 @@
           <div class="illustration">
             <div class="illustration-card">
               <img
-                src="../images/home/desktop/illustration-passionate.svg"
+                src="./images/home/desktop/illustration-passionate.svg"
                 alt=""
               />
               <span>passionate</span>
@@ -77,7 +82,7 @@
             </div>
             <div class="illustration-card">
               <img
-                src="../images/home/desktop/illustration-resourceful.svg"
+                src="./images/home/desktop/illustration-resourceful.svg"
                 alt=""
               />
               <span>resourceful</span>
@@ -90,7 +95,7 @@
             </div>
             <div class="illustration-card">
               <img
-                src="../images/home/desktop/illustration-friendly.svg"
+                src="./images/home/desktop/illustration-friendly.svg"
                 alt=""
               />
               <span>friendly</span>
@@ -124,7 +129,7 @@
       <div class="container">
         <div class="footer-main">
           <div class="navigation">
-            <img src="../images/shared/desktop/logo-light.png" alt="Designo" />
+            <img src="./images/shared/desktop/logo-light.png" alt="Designo" />
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="#">Location</a></li>
@@ -150,19 +155,19 @@
             </div>
             <div class="social-media-icons">
               <a href="#"
-                ><img src="../images/shared/desktop/icon-facebook.svg" alt=""
+                ><img src="./images/shared/desktop/icon-facebook.svg" alt=""
               /></a>
               <a href="#"
-                ><img src="../images/shared/desktop/icon-youtube.svg" alt=""
+                ><img src="./images/shared/desktop/icon-youtube.svg" alt=""
               /></a>
               <a href="#"
-                ><img src="../images/shared/desktop/icon-twitter.svg" alt=""
+                ><img src="./images/shared/desktop/icon-twitter.svg" alt=""
               /></a>
               <a href="#"
-                ><img src="../images/shared/desktop/icon-pinterest.svg" alt=""
+                ><img src="./images/shared/desktop/icon-pinterest.svg" alt=""
               /></a>
               <a href="#"
-                ><img src="../images/shared/desktop/icon-instagram.svg" alt=""
+                ><img src="./images/shared/desktop/icon-instagram.svg" alt=""
               /></a>
             </div>
           </div>
