--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
       <div class="container">
         <div class="footer-main">
           <div class="navigation">
-            <img src="./images/shared/desktop/logo-light.png" alt="Designo" />
+            <a href="./index.html"
+              ><img src="./images/shared/desktop/logo-light.png" alt="Designo"
+            /></a>
+
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="#">Location</a></li>
@@ -146,11 +149,9 @@
                 </p>
               </div>
               <div class="central-office">
-                <p>
-                  Contact Us (Central Office) <br />
-                  P : +1 253-863-8967 <br />
-                  M : contact@designo.co
-                </p>
+                <p>Contact Us (Central Office)</p>
+                <a href="tel:+1 253-863-8967">P : +1 253-863-8967</a> <br />
+                <a href="mailto:contact@designo.co">M : contact@designo.co</a>
               </div>
             </div>
             <div class="social-media-icons">
