--- a/pages/about.html
+++ b/pages/about.html
@@ -32,158 +32,166 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section class="section-1">
+        <div class="container">
+          <div class="about-hero">
+            <div class="about-hero-left">
+              <h2>about us</h2>
+              <p>
+                Founded in 2010, we are a creative agency that produces lasting
+                results for our clients. We’ve partnered with many startups,
+                corporations, and nonprofits alike to craft designs that make
+                real impact. We’re always looking forward to creating brands,
+                products, and digital experiences that connect with our clients’
+                audiences.
+              </p>
+            </div>
+            <img src="../images/about/desktop/image-about-hero.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="section-2">
+        <div class="container">
+          <div class="world-class">
+            <img
+              src="../images/about/desktop/image-world-class-talent.jpg"
+              alt=""
+            />
+            <div class="world-class-right">
+              <h2>World-class talent</h2>
+              <p>
+                We are a crew of strategists, problem-solvers, and
+                technologists. Every design is thoughtfully crafted from concept
+                to launch, ensuring success in its given market. We are
+                constantly updating our skills in a myriad of platforms. <br />
+                <br />
+                Our team is multi-disciplinary and we are not merely interested
+                in form — content and meaning are just as important. We give
+                great importance to craftsmanship, service, and prompt delivery.
+                Clients have always been impressed with our high-quality
+                outcomes that encapsulates their brand’s story and mission.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-3">
+        <div class="container">
+          <div class="countries">
+            <div class="canada">
+              <img
+                src="../images/shared/desktop/illustration-canada.svg"
+                alt=""
+              />
+              <span>canada</span>
+              <button class="btn button-on-light">see location</button>
+            </div>
+            <div class="australia">
+              <img
+                src="../images/shared/desktop/illustration-australia.svg"
+                alt=""
+              />
+              <span>australia</span>
+              <button class="btn button-on-light">see location</button>
+            </div>
+            <div class="united-kingdom">
+              <img
+                src="../images/shared/desktop/illustration-united-kingdom.svg"
+                alt=""
+              />
+              <span>united kingdom</span>
+              <button class="btn button-on-light">see location</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-4">
+        <div class="container">
+          <div class="real-deal">
+            <div class="real-deal-left">
+              <h2>The real deal</h2>
+              <p>
+                As strategic partners in our clients’ businesses, we are ready
+                to take on any challenge as our own. Solving real problems
+                require empathy and collaboration, and we strive to bring a
+                fresh perspective to every opportunity. We make design and
+                technology more accessible and give you tools to measure
+                success. <br />
+                <br />
+                We are visual storytellers in appealing and captivating ways. By
+                combining business and marketing strategies, we inspire
+                audiences to take action and drive real results.
+              </p>
+            </div>
+            <img src="../images/about/desktop/image-real-deal.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="section-5">
+        <div class="container">
+          <div class="lets-talk-main">
+            <div class="lets-talk-left">
+              <h2>Let’s talk about your project</h2>
+              <p>
+                Ready to take it to the next level? Contact us today and find
+                out how our expertise can help your business grow.
+              </p>
+            </div>
+            <button class="btn button-on-dark">get in touch</button>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="footer-main">
+          <div class="navigation">
+            <a href="../index.html"
+              ><img src="../images/shared/desktop/logo-light.png" alt="Designo"
+            /></a>
+
+            <ul class="menu-nav">
+              <li><a href="./about.html">Our company</a></li>
+              <li><a href="#">Location</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-main-bottom">
+            <div class="address">
+              <div class="designo-office">
+                <p>
+                  Designo Central Office <br />
+                  3886 Wellington Street <br />
+                  Toronto, Ontario M9C 3J5
+                </p>
+              </div>
+              <div class="central-office">
+                <p>Contact Us (Central Office)</p>
+                <a href="tel:+998904088285">P : +998904088285</a> <br />
+                <a href="mailto:contact@designo.co">M : contact@designo.co</a>
+              </div>
+            </div>
+            <div class="social-media-icons">
+              <a href="#"
+                ><img src="../images/shared/desktop/icon-facebook.svg" alt=""
+              /></a>
+              <a href="#"
+                ><img src="../images/shared/desktop/icon-youtube.svg" alt=""
+              /></a>
+              <a href="#"
+                ><img src="../images/shared/desktop/icon-twitter.svg" alt=""
+              /></a>
+              <a href="#"
+                ><img src="../images/shared/desktop/icon-pinterest.svg" alt=""
+              /></a>
+              <a href="#"
+                ><img src="../images/shared/desktop/icon-instagram.svg" alt=""
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
-  <section class="section-1">
-    <div class="container">
-      <div class="about-hero">
-        <div class="about-hero-left">
-          <h2>about us</h2>
-          <p>
-            Founded in 2010, we are a creative agency that produces lasting
-            results for our clients. We’ve partnered with many startups,
-            corporations, and nonprofits alike to craft designs that make real
-            impact. We’re always looking forward to creating brands, products,
-            and digital experiences that connect with our clients’ audiences.
-          </p>
-        </div>
-        <img src="../images/about/desktop/image-about-hero.jpg" alt="" />
-      </div>
-    </div>
-  </section>
-  <section class="section-2">
-    <div class="container">
-      <div class="world-class">
-        <img
-          src="../images/about/desktop/image-world-class-talent.jpg"
-          alt=""
-        />
-        <div class="world-class-right">
-          <h2>World-class talent</h2>
-          <p>
-            We are a crew of strategists, problem-solvers, and technologists.
-            Every design is thoughtfully crafted from concept to launch,
-            ensuring success in its given market. We are constantly updating our
-            skills in a myriad of platforms. <br />
-            <br />
-            Our team is multi-disciplinary and we are not merely interested in
-            form — content and meaning are just as important. We give great
-            importance to craftsmanship, service, and prompt delivery. Clients
-            have always been impressed with our high-quality outcomes that
-            encapsulates their brand’s story and mission.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="section-3">
-    <div class="container">
-      <div class="countries">
-        <div class="canada">
-          <img src="../images/shared/desktop/illustration-canada.svg" alt="" />
-          <span>canada</span>
-          <button class="btn button-on-light">see location</button>
-        </div>
-        <div class="australia">
-          <img
-            src="../images/shared/desktop/illustration-australia.svg"
-            alt=""
-          />
-          <span>australia</span>
-          <button class="btn button-on-light">see location</button>
-        </div>
-        <div class="united-kingdom">
-          <img
-            src="../images/shared/desktop/illustration-united-kingdom.svg"
-            alt=""
-          />
-          <span>united kingdom</span>
-          <button class="btn button-on-light">see location</button>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="section-4">
-    <div class="container">
-      <div class="real-deal">
-        <div class="real-deal-left">
-          <h2>The real deal</h2>
-          <p>
-            As strategic partners in our clients’ businesses, we are ready to
-            take on any challenge as our own. Solving real problems require
-            empathy and collaboration, and we strive to bring a fresh
-            perspective to every opportunity. We make design and technology more
-            accessible and give you tools to measure success. <br />
-            <br />
-            We are visual storytellers in appealing and captivating ways. By
-            combining business and marketing strategies, we inspire audiences to
-            take action and drive real results.
-          </p>
-        </div>
-        <img src="../images/about/desktop/image-real-deal.jpg" alt="" />
-      </div>
-    </div>
-  </section>
-  <section class="section-5">
-    <div class="container">
-      <div class="lets-talk-main">
-        <div class="lets-talk-left">
-          <h2>Let’s talk about your project</h2>
-          <p>
-            Ready to take it to the next level? Contact us today and find out
-            how our expertise can help your business grow.
-          </p>
-        </div>
-        <button class="btn button-on-dark">get in touch</button>
-      </div>
-    </div>
-  </section>
-  <footer>
-    <div class="container">
-      <div class="footer-main">
-        <div class="navigation">
-          <img src="../images/shared/desktop/logo-light.png" alt="Designo" />
-          <ul class="menu-nav">
-            <li><a href="./about.html">Our company</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-main-bottom">
-          <div class="address">
-            <div class="designo-office">
-              <p>
-                Designo Central Office <br />
-                3886 Wellington Street <br />
-                Toronto, Ontario M9C 3J5
-              </p>
-            </div>
-            <div class="central-office">
-              <p>
-                Contact Us (Central Office) <br />
-                P : +1 253-863-8967 <br />
-                M : contact@designo.co
-              </p>
-            </div>
-          </div>
-          <div class="social-media-icons">
-            <a href="#"
-              ><img src="../images/shared/desktop/icon-facebook.svg" alt=""
-            /></a>
-            <a href="#"
-              ><img src="../images/shared/desktop/icon-youtube.svg" alt=""
-            /></a>
-            <a href="#"
-              ><img src="../images/shared/desktop/icon-twitter.svg" alt=""
-            /></a>
-            <a href="#"
-              ><img src="../images/shared/desktop/icon-pinterest.svg" alt=""
-            /></a>
-            <a href="#"
-              ><img src="../images/shared/desktop/icon-instagram.svg" alt=""
-            /></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
 </html>
