designo-home-responsive

--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
       <nav>
         <div class="container">
           <div class="navigation">
-            <img src="./images/shared/desktop/logo-dark.png" alt="Designo" />
+            <img
+              class="logo-nav"
+              src="./images/shared/desktop/logo-dark.png"
+              alt="Designo"
+            />
             <ul class="menu-nav nav-bg-dark">
               <li><a href="./pages/about.html">Our company</a></li>
               <li><a href="#">Location</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
+            <img
+              class="burger-menu"
+              src="./images/shared/mobile/icon-hamburger.svg"
+              alt=""
+            />
           </div>
         </div>
       </nav>
@@ -40,7 +49,16 @@
             </p>
             <button class="btn button-on-dark">Learn more</button>
           </div>
-          <img src="./images/home/desktop/image-hero-phone.svg" alt="" />
+          <img
+            class="hero-phone-desktop"
+            src="./images/home/desktop/image-hero-phone.svg"
+            alt=""
+          />
+          <img
+            class="hero-phone-tablet"
+            src="./images/home/tablet/image-hero-phone-tablet.svg"
+            alt=""
+          />
         </div>
       </div>
     </header>
@@ -73,37 +91,43 @@
                 src="./images/home/desktop/illustration-passionate.svg"
                 alt=""
               />
-              <span>passionate</span>
-              <p>
-                Each project starts with an in-depth brand research to ensure we
-                only create products that serve a purpose. We merge art, design,
-                and technology into exciting new solutions.
-              </p>
+              <div class="illustration-text">
+                <span>passionate</span>
+                <p>
+                  Each project starts with an in-depth brand research to ensure
+                  we only create products that serve a purpose. We merge art,
+                  design, and technology into exciting new solutions.
+                </p>
+              </div>
             </div>
             <div class="illustration-card">
               <img
                 src="./images/home/desktop/illustration-resourceful.svg"
                 alt=""
               />
-              <span>resourceful</span>
-              <p>
-                Everything that we do has a strategic purpose. We use an agile
-                approach in all of our projects and value customer
-                collaboration. It guarantees superior results that fulfill our
-                clients’ needs.
-              </p>
+              <div class="illustration-text">
+                <span>resourceful</span>
+                <p>
+                  Everything that we do has a strategic purpose. We use an agile
+                  approach in all of our projects and value customer
+                  collaboration. It guarantees superior results that fulfill our
+                  clients’ needs.
+                </p>
+              </div>
             </div>
             <div class="illustration-card">
               <img
                 src="./images/home/desktop/illustration-friendly.svg"
                 alt=""
               />
-              <span>friendly</span>
-              <p>
-                We are a group of enthusiastic folks who know how to put people
-                first. Our success depends on our customers, and we strive to
-                give them the best experience a company can provide.
-              </p>
+              <div class="illustration-text">
+                <span>friendly</span>
+                <p>
+                  We are a group of enthusiastic folks who know how to put
+                  people first. Our success depends on our customers, and we
+                  strive to give them the best experience a company can provide.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -130,7 +154,10 @@
         <div class="footer-main">
           <div class="navigation">
             <a href="./index.html"
-              ><img src="./images/shared/desktop/logo-light.png" alt="Designo"
+              ><img
+                class="logo-nav"
+                src="./images/shared/desktop/logo-light.png"
+                alt="Designo"
             /></a>
 
             <ul class="menu-nav">
