designo-about-responsive

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,13 +21,21 @@
         <div class="container">
           <div class="navigation">
             <a href="../index.html">
-              <img src="../images/shared/desktop/logo-dark.png" alt="Designo"
+              <img
+                class="logo-nav"
+                src="../images/shared/desktop/logo-dark.png"
+                alt="Designo"
             /></a>
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="#">Location</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
+            <img
+              src="../images/shared/mobile/icon-hamburger.svg"
+              alt=""
+              class="burger-menu"
+            />
           </div>
         </div>
       </nav>
@@ -47,7 +55,16 @@
                 audiences.
               </p>
             </div>
-            <img src="../images/about/desktop/image-about-hero.jpg" alt="" />
+            <img
+              class="hero-desktop"
+              src="../images/about/desktop/image-about-hero.jpg"
+              alt=""
+            />
+            <img
+              class="hero-tablet"
+              src="../images/about/tablet/image-about-hero.jpg"
+              alt=""
+            />
           </div>
         </div>
       </section>
@@ -55,6 +72,12 @@
         <div class="container">
           <div class="world-class">
             <img
+              class="world-class-tablet"
+              src="../images/about/tablet/image-world-class-talent.jpg"
+              alt=""
+            />
+            <img
+              class="world-class-desktop"
               src="../images/about/desktop/image-world-class-talent.jpg"
               alt=""
             />
@@ -124,7 +147,16 @@
                 audiences to take action and drive real results.
               </p>
             </div>
-            <img src="../images/about/desktop/image-real-deal.jpg" alt="" />
+            <img
+              class="real-deal-desktop"
+              src="../images/about/desktop/image-real-deal.jpg"
+              alt=""
+            />
+            <img
+              class="real-deal-tablet"
+              src="../images/about/tablet/image-real-deal.jpg"
+              alt=""
+            />
           </div>
         </div>
       </section>
@@ -148,7 +180,10 @@
         <div class="footer-main">
           <div class="navigation">
             <a href="../index.html"
-              ><img src="../images/shared/desktop/logo-light.png" alt="Designo"
+              ><img
+                class="logo-nav"
+                src="../images/shared/desktop/logo-light.png"
+                alt="Designo"
             /></a>
 
             <ul class="menu-nav">
