designo-app-grafic-design-added

--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
           <div class="design-cards">
             <div class="design-cards-left">
               <h2>web design</h2>
-              <span>view projects</span>
+              <a href="./pages/web-design.html">view projects</a>
             </div>
             <div class="design-cards-right">
               <div class="design-cards-right-up">
                 <h2>app design</h2>
-                <span>view projects</span>
+                <a href="./pages/app-design.html">view projects</a>
               </div>
               <div class="design-cards-right-bottom">
                 <h2>graphic design</h2>
-                <span>view projects</span>
+                <a href="./pages/graphic-design.html">view projects</a>
               </div>
             </div>
           </div>
