--- a/pages/web-design.html
+++ b/pages/web-design.html
@@ -119,11 +119,11 @@
           <div class="design-cards">
             <div class="design-cards-left">
               <h2>app design</h2>
-              <span>view projects</span>
+              <a href="./app-design.html">view projects</a>
             </div>
             <div class="design-cards-right">
               <h2>graphic design</h2>
-              <span>view projects</span>
+              <a href="./graphic-design.html">view projects</a>
             </div>
           </div>
         </div>
