designo-location-added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             />
             <ul class="menu-nav nav-bg-dark">
               <li><a href="./pages/about.html">Our company</a></li>
-              <li><a href="#">Location</a></li>
+              <li><a href="./pages/location.html">Location</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
             <img
@@ -162,7 +162,7 @@
 
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
-              <li><a href="#">Location</a></li>
+              <li><a href="./pages/location.html">Location</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
