--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@
             /></a>
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
-              <li><a href="#">Location</a></li>
+              <li><a href="./location.html">Location</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
             <img
@@ -188,7 +188,7 @@
 
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
-              <li><a href="#">Location</a></li>
+              <li><a href="./location.html">Location</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
