designo-location-icon-burger-added

--- a/pages/location.html
+++ b/pages/location.html
@@ -33,7 +33,7 @@
             </ul>
             <img
               class="burger-menu"
-              src="./images/shared/mobile/icon-hamburger.svg"
+              src="../images/shared/mobile/icon-hamburger.svg"
               alt=""
             />
           </div>
