designo-contact-added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="menu-nav nav-bg-dark">
               <li><a href="./pages/about.html">Our company</a></li>
               <li><a href="./pages/location.html">Location</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
             <img
               class="burger-menu"
@@ -163,7 +163,7 @@
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="./pages/location.html">Location</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-main-bottom">
