--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="./location.html">Location</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
             <img
               src="../images/shared/mobile/icon-hamburger.svg"
@@ -189,7 +189,7 @@
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="./location.html">Location</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-main-bottom">
