--- a/pages/location.html
+++ b/pages/location.html
@@ -29,7 +29,7 @@
             <ul class="menu-nav nav-bg-dark">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="./location.html">Location</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
             <img
               class="burger-menu"
@@ -158,7 +158,7 @@
             <ul class="menu-nav">
               <li><a href="./about.html">Our company</a></li>
               <li><a href="./location.html">Location</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-main-bottom">
